update to add new issue